@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.free.cable"
        name="Free Cable"
-       version="0.0.5"
+       version="0.0.6"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
